--- a/in-sync-frontend/package.json
+++ b/in-sync-frontend/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-import": "^2.20.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-player": "^1.15.3",
     "react-scripts": "3.4.1"
   },
   "scripts": {
