--- a/in-sync-frontend/package.json
+++ b/in-sync-frontend/package.json
@@ -13,7 +13,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-player": "^1.15.3",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "screenfull": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
