--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "Backend server for the in-sync SOFTENG 750 project at the uoa",
   "main": "index.js",
-  "scripts": { 
-    "start": "nodemon server.js --exec babel-node --presets env", 
-    "release": "npm run clean && npm run build && npm run serve", 
-    "clean": "rm -rf dist && mkdir dist", "build": "babel . -s -D -d dist --presets env --ignore node_modules", 
-    "serve": "node dist/server.js" 
-  }, 
+  "scripts": {
+    "start": "nodemon server.js --exec babel-node --presets env",
+    "release": "npm run clean && npm run build && npm run serve",
+    "clean": "rm -rf dist && mkdir dist",
+    "build": "babel . -s -D -d dist --presets env --ignore node_modules",
+    "serve": "node dist/server.js",
+    "lint": "eslint src/**/*.js",
+    "fix-lint": "eslint src/**/*.js --fix"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -18,6 +21,12 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "nodemon": "^2.0.2"
   }
 }
