--- a/in-sync-frontend/package.json
+++ b/in-sync-frontend/package.json
@@ -15,6 +15,7 @@
     "react-chatbox-component": "0.0.5",
     "react-dom": "^16.13.1",
     "react-player": "^1.15.3",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux-logger": "^3.0.6",
