--- a/in-sync-frontend/package.json
+++ b/in-sync-frontend/package.json
@@ -11,6 +11,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "history": "^4.10.1",
     "react": "^16.13.1",
     "react-chatbox-component": "0.0.5",
     "react-dom": "^16.13.1",
@@ -18,6 +19,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "screenfull": "^5.0.2"
