--- a/in-sync-frontend/package.json
+++ b/in-sync-frontend/package.json
@@ -12,6 +12,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-chatbox-component": "0.0.5",
     "react-dom": "^16.13.1",
