--- a/in-sync-frontend/package.json
+++ b/in-sync-frontend/package.json
@@ -9,10 +9,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "history": "^4.10.1",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-chatbox-component": "0.0.5",
     "react-dom": "^16.13.1",
