--- a/in-sync-frontend/package.json
+++ b/in-sync-frontend/package.json
@@ -25,7 +25,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "screenfull": "^5.0.2"
+    "screenfull": "^5.0.2",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
