--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.7",
+    "nanoid": "^3.1.9",
     "rootpath": "^0.1.2"
   },
   "devDependencies": {
