--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "Backend server for the in-sync SOFTENG 750 project at the uoa",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js --exec babel-node --presets env",
+    "start": "node server.js --exec babel-node --presets env",
+    "start-dev":"nodemon server.js --exec babel-node --presets env",
     "release": "npm run clean && npm run build && npm run serve",
     "clean": "rm -rf dist && mkdir dist",
     "build": "babel . -s -D -d dist --presets env --ignore node_modules",
