--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --esm server.js",
-    "start-dev": "nodemon server.js --esm --exec babel-node --presets env",
+    "start": "node esm server.js",
+    "start-dev": "nodemon server.js esm --exec babel-node --presets env",
     "release": "npm run clean && npm run build && npm run serve",
     "clean": "rm -rf dist && mkdir dist",
     "build": "babel . -s -D -d dist --presets env --ignore node_modules",
