Made potential changes

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Backend server for the in-sync SOFTENG 750 project at the uoa",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node -r esm server.js",
-    "start-dev": "nodemon server.js -r esm --exec babel-node --presets env",
+    "start": "node --experimental-json-modules server.js",
+    "start-dev": "nodemon --exec babel-node --presets env --experimental-json-modules server.js",
     "release": "npm run clean && npm run build && npm run serve",
     "clean": "rm -rf dist && mkdir dist",
     "build": "babel . -s -D -d dist --presets env --ignore node_modules",
