--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Backend server for the in-sync SOFTENG 750 project at the uoa",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --experimental-json-modules server.js",
+    "start": "node --experimental-modules --experimental-json-modules server.js",
     "start-dev": "nodemon --exec babel-node --presets env --experimental-json-modules server.js",
     "release": "npm run clean && npm run build && npm run serve",
     "clean": "rm -rf dist && mkdir dist",
@@ -17,10 +17,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@std/esm": "^0.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
     "jsonwebtoken": "^8.5.1",
