Update backend configurations and structure to allow the project to be hosted on heroku (#79)
* Added code to host mongoDB database

* Replaced Secrets

* Added logs for some environment variables

* Differentiate between local dev and hosted scripts

* Undo previosu changes. Update node

* Update node package

* Add type modules to package.json

* Change the import

* Added .js to all imports of local files

* Add .js to all import files

* Remove modules.export from jwt

* Add ESM to packages

* Fix error caused by a bad flag

* Fix a flag in npm start

* remove all require and replace it with import to fix issues with deploying

* Change import from require to use import

* Change

* Updated to latest node verison

* Removed heroku from package.json

* Remove heroku stuff from package-lock.json

* Made potential changes

* Refactor import/export statements to work with es6 modules

* Added placeholder config file to ensure deployment build passes

* Fixed merge conflicts with master and change eslint to be compatible with es6 modules

Co-authored-by: Frank Wang Ma <frankwangma@gmail.com>

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Backend server for the in-sync SOFTENG 750 project at the uoa",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon server.js --exec babel-node --presets env",
+    "start": "node --experimental-modules --experimental-json-modules server.js",
+    "start-dev": "nodemon --exec babel-node --presets env --experimental-json-modules server.js",
     "release": "npm run clean && npm run build && npm run serve",
     "clean": "rm -rf dist && mkdir dist",
     "build": "babel . -s -D -d dist --presets env --ignore node_modules",
@@ -15,17 +17,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@std/esm": "^0.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0",
     "express-jwt": "^5.3.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.7",
-    "nanoid": "^3.1.9",
-    "rootpath": "^0.1.2"
+    "rootpath": "^0.1.2",
+    "socket.io": "^2.3.0",
+    "nanoid": "^3.1.9"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -37,5 +40,8 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "nodemon": "^2.0.2"
+  },
+  "engines": {
+    "node": "14.3.0"
   }
 }
