--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "mongodb-memory-server": "^6.6.1",
     "nodemon": "^2.0.2"
   },
   "engines": {
