--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node --experimental-modules --experimental-json-modules server.js",
     "start-dev": "nodemon --exec babel-node --presets env server.js",
+    "test": "jest",
     "release": "npm run clean && npm run build && npm run serve",
     "clean": "rm -rf dist && mkdir dist",
     "build": "babel . -s -D -d dist --presets env --ignore node_modules",
@@ -25,22 +26,28 @@
     "express-jwt": "^5.3.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
+    "mongodb-memory-server-core": "^6.6.1",
     "mongoose": "^5.9.7",
+    "nanoid": "^3.1.9",
     "rootpath": "^0.1.2",
-    "socket.io": "^2.3.0",
-    "nanoid": "^3.1.9"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@types/jest": "^25.2.3",
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-jest": "^26.0.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "jest": "^26.0.1",
     "mongodb-memory-server": "^6.6.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "regenerator-runtime": "^0.13.5"
   },
   "engines": {
     "node": "14.3.0"
