--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@types/jest": "^25.2.3",
+    "axios": "^0.19.2",
     "babel-cli": "^6.26.0",
     "babel-jest": "^26.0.1",
     "eslint": "^6.8.0",
@@ -44,6 +45,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "isomorphic-unfetch": "^3.0.0",
     "jest": "^26.0.1",
     "mongodb-memory-server": "^6.6.1",
     "nodemon": "^2.0.2",
