--- a/backend/package.json
+++ b/backend/package.json
@@ -33,12 +33,14 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
     "@babel/core": "^7.9.6",
+    "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.9.6",
     "@types/jest": "^25.2.3",
     "axios": "^0.19.2",
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^26.0.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.4.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.1",
