--- a/in-sync-frontend/package.json
+++ b/in-sync-frontend/package.json
@@ -17,6 +17,7 @@
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-chatbox-component": "0.0.5",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-player": "^1.15.3",
     "react-redux": "^7.2.0",
