--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,11 @@
   "type": "module",
   "scripts": {
     "start": "node --experimental-modules --experimental-json-modules server.js",
-    "start-dev": "nodemon --exec babel-node --presets env server.js",
+    "start-dev": "nodemon --exec babel-node --presets @babel/preset-env server.js",
     "test": "jest",
     "release": "npm run clean && npm run build && npm run serve",
     "clean": "rm -rf dist && mkdir dist",
-    "build": "babel . -s -D -d dist --presets env --ignore node_modules",
+    "build": "babel . -s -D -d dist --presets @babel/preset-env --ignore node_modules",
     "serve": "node dist/server.js",
     "lint": "eslint src/**/*.js",
     "fix-lint": "eslint src/**/*.js --fix"
@@ -52,6 +52,18 @@
     "mongodb-memory-server": "^6.6.1",
     "nodemon": "^2.0.2",
     "regenerator-runtime": "^0.13.5"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
   },
   "engines": {
     "node": "14.3.0"
