--- a/in-sync-frontend/package.json
+++ b/in-sync-frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@jest/globals": "^26.0.1",
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.50",
@@ -13,7 +14,9 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "fetch-mock": "^9.10.1",
     "history": "^4.10.1",
+    "node-fetch": "^2.6.0",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-chatbox-component": "0.0.5",
@@ -25,6 +28,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "screenfull": "^5.0.2",
     "socket.io-client": "^2.3.0"
@@ -51,5 +55,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "jest-enzyme": "^7.1.2",
+    "react-test-renderer": "^16.13.1"
   }
 }
